apps/charlie-server/overlays/prd/env-patch.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: charlie-server-deploy-prd
spec:
  template:
    spec:
      containers:
        - name: charlie-server
